grammar.js
    source_file: $ => repeat($._statement),

    _kw_all: $ => kw("ALL"),
    _kw_and: $ => kw("AND"),
    _kw_by: $ => kw("BY"),
    _kw_case: $ => kw("CASE"),
    _kw_distinct: $ => kw("DISTINCT"),
    _kw_else: $ => kw("ELSE"),
    _kw_end: $ => kw("END"),
    _kw_from: $ => kw("FROM"),
    _kw_group: $ => kw("GROUP"),
    _kw_having: $ => kw("HAVING"),
    _kw_in: $ => kw("IN"),
    _kw_join: $ => kw("JOIN"),
    _kw_like: $ => kw("LIKE"),
    _kw_not: $ => kw("NOT"),
    _kw_on: $ => kw("ON"),
    _kw_or: $ => kw("OR"),
    _kw_select: $ => kw("SELECT"),
    _kw_then: $ => kw("THEN"),
    _kw_when: $ => kw("WHEN"),
    _kw_where: $ => kw("WHERE"),
    _statement: $ => seq(
      choice(
        $.select_statement,
        $.insert_statement,
        $.update_statement,
        $.delete_statement,
        $.create_table_statement,
        $.create_index_statement,
        $.create_view_statement,
        $.create_trigger_statement,
        $.create_virtual_table_statement,
        $.create_aggregate_statement,
        $.create_function_statement,
        $.show_statement,
        $.go_statement,
        $.drop_statement,
        $.alter_table_statement,
        $.pragma_statement,
        $.attach_statement,
        $.detach_statement,
        $.vacuum_statement,
        $.analyze_statement,
        $.reindex_statement,
        $.begin_statement,
        $.commit_statement,
        $.rollback_statement,
        $.savepoint_statement,
        $.release_statement,
        $.explain_statement,
      ),
      optional(';')
    ),

    identifier: $ => token(prec(-1, /[a-zA-Z_][a-zA-Z0-9_]*/)),

    qualified_identifier: $ => seq(
      optional(seq(field('schema', $.identifier), '.')),
      field('name', $.identifier)
    ),

    select_statement: $ => seq(
      optional($.with_clause),
      choice(
        $.select_core,
        $.values_clause
      ),
      repeat($.compound_operator),
      optional($.order_by_clause),
      optional($.limit_clause)
    ),

    select_core: $ => seq(
      $._kw_select,
      optional(choice($._kw_distinct, $._kw_all)),
      optional($.top_clause), // SQL Server TOP clause
      field('columns', $.select_list),
      optional($.from_clause),
      optional($.where_clause),
      optional($.group_by_clause),
      optional($.window_clause),
      optional($.for_update_clause)
    ),

    select_list: $ => choice(
      '*',
      commaSep1($.result_column)
    ),

    from_clause: $ => seq(
      $._kw_from,
      $.table_or_subquery,
      repeat(choice($.join_clause, $.apply_clause))
    ),

    table_or_subquery: $ => choice(
      seq(
        qualified_table_name($),
        optional(choice(
          seq(kw('INDEXED'), $._kw_by, field('index', $.identifier)),
          seq($._kw_not, kw('INDEXED')),
          $.table_hint,  // SQL Server table hints
          $.mysql_index_hint  // MySQL index hints
        ))
      ),
      seq(
        '(',
        choice(
          $.select_statement,
          $.table_or_subquery,
          seq($.table_or_subquery, repeat1($.join_clause))
        ),
        ')',
        optional(alias($))
      )
    ),

    join_clause: $ => seq(
      optional(choice(kw('NATURAL'))),
      optional(choice(kw('LEFT'), kw('RIGHT'), kw('FULL'))),
      optional(kw('OUTER')),
      choice($._kw_join, seq(kw('INNER'), $._kw_join), seq(kw('CROSS'), $._kw_join), ','),
      $.table_or_subquery,
      optional($.join_constraint)
    ),

    join_constraint: $ => choice(
      seq($._kw_on, field('condition', $._expression)),
      seq(kw('USING'), column_list($))
    ),

    group_by_clause: $ => seq(
      $._kw_group, $._kw_by,
      commaSep1(field('expression', $._expression)),
      optional(seq($._kw_having, field('having', $._expression)))
    ),

    _expression: $ => choice(
      $.oracle_date_literal,
      $.oracle_timestamp_literal,
      $.oracle_rownum,
      $.oracle_level,
      $._literal_value,
      $.identifier,
      $.qualified_identifier,
      $.parameter,
      $.unary_expression,
      $.binary_expression,
      $.parenthesized_expression,
      $.cast_expression,
      $.case_expression,
      $.exists_expression,
      $.in_expression,
      $.between_expression,
      $.like_expression,
      $.is_expression,
      $.null_expression,
      $.collate_expression,
      $.safe_cast_expression,
      $.function_call,
      $.subquery_expression,
      $.raise_expression,
      $.array_constructor
    ),

    binary_expression: $ => {
      const table = [];
      
      for (const [precedence, operators] of Object.entries({
        1: ['||'],  // String concatenation
        2: ['*', '/', '%'],  // Multiplication, division, modulo
        3: ['+', '-'],  // Addition, subtraction
        4: ['<<', '>>', '&', '|'],  // Bitwise operators
        5: ['<', '<=', '>', '>='],  // Comparison
        6: ['=', '==', '!=', '<>', $._kw_in, seq($._kw_not, $._kw_in), $._kw_like, seq($._kw_not, $._kw_like), kw('GLOB'), seq($._kw_not, kw('GLOB')), kw('MATCH'), seq($._kw_not, kw('MATCH')), kw('REGEXP'), seq($._kw_not, kw('REGEXP')), '->', '->>', '@>', '<@', token('#>'), token('#>>'), token('?&'), token('?|'), token('&&'), token('@@'), token('(+)')],  // Equality, pattern matching, PostgreSQL operators, and Oracle outer join
        7: [$._kw_and],  // Logical AND
        8: [$._kw_or],  // Logical OR
      })) {
        for (const operator of operators) {
          table.push([parseInt(precedence), operator]);
        }
      }

      return choice(...table.map(([precedence, operator]) => 
        prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression)
        ))
      ));
    },

    case_expression: $ => seq(
      $._kw_case,
      optional(field('expression', $._expression)),
      repeat1(seq(
        $._kw_when,
        field('condition', $._expression),
        $._kw_then,
        field('result', $._expression)
      )),
      optional(seq($._kw_else, field('else', $._expression))),
      $._kw_end
    ),

    function_call: $ => prec(1, seq(
      field('name', choice(
        $.identifier,
        // Allow certain keywords to be used as function names
        kw('DATE'), kw('TIME'), kw('DATETIME'), kw('TIMESTAMP')
      )),
      '(',
      optional(choice(
        '*',
        seq(
          optional($._kw_distinct),
          commaSep1(field('argument', $._expression))
        )
      )),
      ')',
      optional(choice(
        seq(kw('FILTER'), '(', $._kw_where, field('filter', $._expression), ')'),
        seq(
          optional(seq(kw('FILTER'), '(', $._kw_where, field('filter', $._expression), ')')),
          kw('OVER'),
          choice(
            field('window', $.identifier),
            $.window_definition
          )
        )
      ))
    )),
